Simplify warning message for outdated data
Removed reference to checking the ANP website in warning message.

--- a/index.html
+++ b/index.html
@@ -978,7 +978,7 @@ GASOLINA R$ ${gasolinaFormatted}
                 dataPeriodElement.classList.add('outdated');
 
                 // Mostrar mensagem de aviso
-                const warningMsg = `<strong>⚠️ Dados desatualizados:</strong> Os valores ainda não foram atualizados pela ANP e são referentes à semana de ${startFormatted} a ${endFormatted}. Atualize novamente em alguns minutos ou verifique o site da ANP.`;
+                const warningMsg = `<strong>⚠️ Dados desatualizados:</strong> Os valores ainda não foram atualizados pela ANP e são referentes à semana de ${startFormatted} a ${endFormatted}. Atualize novamente em alguns minutos.`;
                 showWarning(warningMsg);
             } else {
                 dataPeriodElement.classList.remove('outdated');
